fixed spacing in grid layout profile page

--- a/react-app/src/components/ProfilePage/MyProfile/MyProfile.module.css
+++ b/react-app/src/components/ProfilePage/MyProfile/MyProfile.module.css
@@ -56,18 +56,19 @@
 .photos__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    width: fit-content;
+    width: 100%;
 }
 
 .photos__container > div {
     position: relative;
-    left: 10%;
+    /* left: 10%; */
 }
 
 .center__container {
     width: 55vw;
     position: absolute;
-    left: 20vw;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .left__container {
